# hello-cross-compile

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  configure.sh
cmake/: gcc-x86-64_toolchain.cmake  gnueabi-arm_toolchain.cmake  mingw-w64_toolchain.cmake
include/: booger.hpp
src/: CMakeLists.txt  booger.cpp  main.cpp
